# ranch

./: .gitignore  README.md  ROADMAP.md  USAGE.md  pyproject.toml
.claude/commands/: ranch-watch-pr.md
console/: README.md  electron.vite.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
console/src/main/: config.ts  docker.ts  git.ts  index.ts  ipc.ts  notes.ts  process.ts  pty.ts  runs.ts  transcript.ts  worktrees.ts
console/src/preload/: index.ts
console/src/renderer/: App.tsx  Terminal.tsx  index.html  styles.css
console/src/shared/: types.ts
hooks/: capture_feedback.py  reflect_on_end.py
ranch/: cli.py  config.py  context.py  db.py  feedback.py  lessons.py  models.py  reflect.py  reflect_cli.py  runtime.py  transcript.py
ranch/runner/: checkpoints.py  messages.py  orchestrator.py  pr_backend.py  prompts.py  state.py  tools.py
tests/: conftest.py  test_db.py  test_dispatch.py  test_feedback.py  test_interjections.py  test_messages.py  test_orchestrator_loop.py  test_pr_loop.py  test_reflect.py  test_runner.py  test_runtime.py
