[project]
name = "ranch"
version = "0.1.0"
description = "Orchestration and learning layer for the citemed Claude Code agent fleet"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.5",
    "claude-code-sdk>=0.0.14",
    "python-dotenv>=1.0",
    "anyio>=4.0",
]

[project.scripts]
ranch = "ranch.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ranch*"]
